# Collada-Skeletal-Animation-pipeline

./: CMakeLists.txt  README.md  main.cpp  rabbit.cpp  rabbit.h  rabbit.hlsl  rt_defs.h  rt_math.h
data/: flower_cube.blend  flower_cube.dae  stand.dae  suz.blend  suz.dae  test-udo.blend  test-udo.dae
rt_collada/: rt_collada.cpp  rt_collada.h
rt_mesh/: flower_cube.cpp  flower_cube.h  info_object.cpp  info_object.h  rt_mesh.h  suz.cpp  suz.h  test_udo.cpp  test_udo.h
rt_window/: rt_d3dmanager.cpp  rt_d3dmanager.h  rt_window.cpp  rt_window.h
